Linebreak on project titles. Fixes #360

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -15,6 +15,10 @@
  	padding-bottom: 15px;
  }
 
+.col-md-12 > .btn-block {
+       white-space: normal;
+}
+
  * {
   -webkit-border-radius: 0 !important;
      -moz-border-radius: 0 !important;
